--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,3 @@
-BRIGHTPEARL_API_URL="https://use1.brightpearlconnect.com/public-api/nisolo/"
+BRIGHTPEARL_API_URL="https://use1.brightpearlconnect.com/public-api/your_account_name/"
 BRIGHTPEARL_APP_REF="your_app_ref"
 BRIGHTPEARL_ACCOUNT_TOKEN="your_account_token"
